Added GoO EWDS and HTTP endpoints. Generated certificate payload.
